Changelog
=========

3.0 (unreleased)
----------------

- Added bin/build-translations script to opengever.core buildout.
  [lgraf]

- Lay out date range fields in advanced search form side by side.
  Note: This requires the "Init og.advancedsearch profile version" upgrade
  step from opengever.base to be run first!
  [lgraf]

- Removed description texts for advanced search dossier date range fields.
  This is being done in order to avoid layouting issues.
  [lgraf]

- Extract attachments: Set digitially_available allways to true.
  [phgross]