@@ -10,6 +10,7 @@ pipeline =
 [ldapsource]
 blueprint=opengever.ogds.base.sections.ldapsource.users
 ldap_name=ldap
+#filter_pattern=^.*@4teamwork.ch$
 
 [mapping]
 blueprint = collective.transmogrifier.sections.manipulator
