@@ -4,6 +4,10 @@ Changelog
 3.0 (unreleased)
 ----------------
 
+- Added filter_pattern option to LDAPSource blueprint.
+  If set, only imports users whose email address match `filter_pattern`.
+  [lgraf]
+
 - Added bin/build-translations script to opengever.core buildout.
   [lgraf]
 
@@ -14,7 +18,6 @@ Changelog
 
 - Removed description texts for advanced search dossier date range fields.
   This is being done in order to avoid layouting issues.
-  [lgraf]
 
 - Extract attachments: Set digitially_available allways to true.
   [phgross]
